--- a/2022.html
+++ b/2022.html
@@ -131,11 +131,7 @@
     <div class= "col-xl-6 ">
       <div class = "past-proj">
         <center>
-<<<<<<< HEAD
-            <h5> A Compositional Theory of Timed and Probabilistic Process: CospanSpan(Graph)</h5>
-=======
-            <h5> TBD</h5>
->>>>>>> 81fdc40023e1684d472995e983eca02b83085e13
+            <h5> A Compositional Theory of Timed and Probabilistic Processes: CospanSpan(Graph)</h5>
             <p><i>Mentor:</i>  Nicoletta Sabadini
             <!-- <br> <i>TA: </i>  -->
             <!-- <br> <i>Students:</i>  -->
@@ -143,11 +139,7 @@
         </center>
         <hr></hr>
             <p>
-<<<<<<< HEAD
                 Project description and readings coming soon!
-=======
-                TBD
->>>>>>> 81fdc40023e1684d472995e983eca02b83085e13
             </p>
         <!-- <p> Readings</p>
         <ul>
@@ -168,24 +160,15 @@
     <div class= "col-xl-6 ">
       <div class = "past-proj">
         <center>
-<<<<<<< HEAD
             <h5> Algebraic Structures in Logic and Relations</h5>
             <p><i>Mentor:</i>  Filippo Bonchi
-=======
-            <h5> TBD</h5>
-            <p><i>Mentors:</i>  Filippo Bonchi
->>>>>>> 81fdc40023e1684d472995e983eca02b83085e13
             <!-- <br> <i>TA: </i>  -->
             <!-- <br> <i>Students:</i>  -->
             </p>
         </center>
         <hr></hr>
             <p>
-<<<<<<< HEAD
               Project description and readings coming soon!
-=======
-              TBD
->>>>>>> 81fdc40023e1684d472995e983eca02b83085e13
             </p>
     
         <!-- <p> Readings</p>
