--- a/apply.html
+++ b/apply.html
@@ -61,10 +61,10 @@
 
     <p> To begin the application process, fill out the following pre-application form to receive the application materials: <a href="https://forms.gle/dV5JsMusr5zmU81AA">pre-application form</a>.</p>
 
-    <p>After you fill out your pre-application, you will recieve an email with further instructions. This email will include
+    <p>After you fill out your pre-application, you will recieve an email with further instructions. This email will include:
       <ol>
-        <li>the application form</li> 
-        <li> a reference form which you should send to a person who is willing to write a letter of reference on your behalf</li>
+        <li>The application form.</li> 
+        <li>A reference form which you should send to a person who is willing to write a letter of reference on your behalf.</li>
       </ol>
     The letter of reference should confirm any of the following: your background, the ACT School's relevance to your research or career, or your research or career experience.
      </p> 
