--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <h3>Announcements</h3>
           <ul>
-              <li><i>Dec 31, 2021</i>. The applications for the 2022 Adjoint School are now open! Check out the <a href = "2022.html"> project descriptions for the 2022 Adjoint School </a> and then start your <a href="apply.html"> application </a> </li>
+              <li><i>Dec 31, 2021</i>. The applications for the 2022 Adjoint School are now open! Check out the <a href = "2022.html"> project descriptions for the 2022 Adjoint School </a> and then start your application on the <a href="apply.html"> Apply page</a>.</li>
               <li><i> Dec 12, 2021</i>. The in-person research week for the 2022 Adjoint School will be held on July 11 - 15 at the University of Strathclyde in Glasgow, Scotland. We are assembling a great team of mentors and expect to open applications at the end of December or beginning of January.</li> 
               <li><i>Sep 29, 2021</i>. The organizers of the <strong>Adjoint School 2022</strong> are Angeline Aguinaldo, Elena Di Lavore, David Jaz Myers, and Sophie Libkind. The steering committee consists of Daniel Cicala and Brendan Fong.</li>
           </ul>
