--- a/2022.html
+++ b/2022.html
@@ -133,7 +133,7 @@
         <center>
             <h5> A Compositional Theory of Timed and Probabilistic Processes: CospanSpan(Graph)</h5>
             <p><i>Mentor:</i>  Nicoletta Sabadini
-            <!-- <br> <i>TA: </i>  -->
+            <br> <i>TA: </i> Mario Rom&aacute;n
             <!-- <br> <i>Students:</i>  -->
           </p>
         </center>
