Add project description

--- a/2022.html
+++ b/2022.html
@@ -176,9 +176,24 @@
             </p>
         </center>
         <hr></hr>
-            <p>
-              Project description and readings coming soon!
-            </p>
+        <p>
+          Fox's theorem provides a bridge between structures defined by universal properties (products in a category) and structures specified by algebraic means (comonoids in a symmetric monoidal category). Such a theorem has recently received a renewed interest as the algebraic structures allows for reasoning in terms of string diagrams. 
+          While the universal properties underlying logical theories have been extensively studied in categorical logic, their algebraic counterparts have been the objects of fewer investigations. This raises a natural question: can we capture the universal content of logical theories algebraically? In other words, what are the “Fox theorems” for logic?
+          In this project, we attempt to answer to this question by taking as starting point Cartesian bicategories which serves as algebraic setting for regular logic.
+        </p>
+    <p> Readings</p>
+    <ul>
+        <li>
+            <a href = "https://www-sciencedirect-com.stanford.idm.oclc.org/science/article/pii/0022404987901216"> Cartesian bicategories I</a>,  <i> A.Carboni, R.F.C.Walters.</i>
+        </li>
+        <li>
+          <a href="https://arxiv.org/abs/1804.07626">  Graphical conjunctive queries</a>, <i> Filippo Bonchi, Jens Seeber, Pawel Sobocinski </i>
+      </li>
+      <li>
+          <a href="https://arxiv.org/abs/1711.08699"> Functorial Semantics for Relational Theories</a>, <i> Filippo Bonchi, Dusko Pavlovic, Pawel Sobocinski  </i>
+      </li>
+
+    </ul>
     
         <!-- <p> Readings</p>
         <ul>
