update application deadline

--- a/apply.html
+++ b/apply.html
@@ -55,7 +55,7 @@
       <main role="main" class="container">
 
     <h1>Apply</h1>
-    <p>Applications for the 2022 Adjoint School are open until <b>January 29, 2022</b>, 23:59 anywhere on earth. Learn about the projects for the 2022 Adjoint School <a href="2022.html">here</a>.</p>
+    <p>Applications for the 2022 Adjoint School are open until <strike>January 29, 2022</strike> <b>Friday, February 4, 2022</b>, 23:59 anywhere on earth. Learn about the projects for the 2022 Adjoint School <a href="2022.html">here</a>.</p>
 
     <h3> Application Process </h3>
 
