--- a/apply.html
+++ b/apply.html
@@ -55,8 +55,8 @@
       <main role="main" class="container">
 
     <h1>Apply</h1>
-    <p>Applications for the 2022 Adjoint School are open until <strike>January 29, 2022</strike> <b>Friday, February 4, 2022</b>, 23:59 anywhere on earth. Learn about the projects for the 2022 Adjoint School <a href="2022.html">here</a>.</p>
-
+    <p>Applications for the 2022 Adjoint School are now closed! We will be in touch with all applicants by the end of February.</p>
+<!-- 
     <h3> Application Process </h3>
 
     <p> To begin the application process, fill out the following pre-application form to receive the application materials: <a href="https://forms.gle/dV5JsMusr5zmU81AA">pre-application form</a>.</p>
@@ -71,7 +71,7 @@
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
-
+ -->
 
     <hr></hr>
     <div class="row">
