--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
     <h3>Announcements</h3>
           <ul>
+              <li><i>Feb 5, 2022</i>. The applications for the 2022 Adjoint School are now closed! We will be in touch with all applicants by the end of Febraury. A hearty thank you to everyone who applied! </li>
               <li><i>Jan 28, 2022</i>. The deadline for applications to the 2022 Adjoint School has been extended to <b> February, 4, 2022 </b>! We really appreciate the hard work of our applicants and their referees. If you are an applicant and have a question or concern, please email us a actadjointschool@gmail.com. </li>
               <li><i>Dec 31, 2021</i>. The applications for the 2022 Adjoint School are now open! Check out the <a href = "2022.html"> project descriptions for the 2022 Adjoint School </a> and then start your application on the <a href="apply.html"> Apply page</a>.</li>
               <li><i> Dec 12, 2021</i>. The in-person research week for the 2022 Adjoint School will be held on July 11 - 15 at the University of Strathclyde in Glasgow, Scotland. We are assembling a great team of mentors and expect to open applications at the end of December or beginning of January.</li> 
