Add landing page

--- a/2022.html
+++ b/2022.html
@@ -72,6 +72,10 @@
     </ul>
   </p>
 
+  <p> Current participants can find important links, information, and the schedule on the 
+   <a href = "https://docs.google.com/document/d/1w731_rSoIez9t7CMwU513tQmRrI2fLKj2kA3xyHVe0o/edit?usp=sharing"> 
+  Landing Page </a>. Please note that this document is only accessible to current Adjoint School students, TAs, and mentors. </p>
+
 
 
   <hr></hr>
@@ -171,7 +175,7 @@
         <center>
             <h5> Algebraic Structures in Logic and Relations</h5>
             <p><i>Mentor:</i>  Filippo Bonchi
-            <!-- <br> <i>TA: </i>  -->
+            <br> <i>TA: </i>  Chad Nester
             <!-- <br> <i>Students:</i>  -->
             </p>
         </center>
