--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
                               <tr> <td><i>December - January</i></td> <td> applications open</td> </tr>
                               <tr> <td><i>February</i></td> <td> participants announced</td> </tr>
                               <tr> <td><i>March - June </i></td> <td> online learning seminar</td> </tr>
-                              <tr> <td><i>mid-to-late July</i></td> <td> in-person research week </td> </tr>
-                              <tr> <td><i>mid-to-late July</i></td> <td> Applied Category Theory conference</td> </tr>
+                              <tr> <td><i>mid-July</i></td> <td> in-person research week </td> </tr>
+                              <tr> <td><i>mid-July</i></td> <td> Applied Category Theory conference</td> </tr>
                           </table>
                       </center>
 
