--- a/2022.html
+++ b/2022.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+  <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
     <a class="navbar-brand" href="index.html">The Adjoint School</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -40,13 +40,14 @@
                     <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
                     <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
                     <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
+                    <a class="dropdown-item" href="2022.html">Adjoint School 2022</a>
                 </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="papers.html">Papers & Blogposts</a>
             </li>
             <li>
-                <a class="nav-link" href="2022.html">Adjoint School 2022</a>
+                <a class="nav-link" href="2023.html">Adjoint School 2023</a>
             </li>
         </ul>
     </div>
