add group photo to 2022.html

--- a/2022.html
+++ b/2022.html
@@ -63,19 +63,16 @@
   <p> The 2022 Adjoint School features projects mentored by Spencer Breiner, Joe Moeller, Paige North, Nicoletta Sabadini, and Filippo Bonchi.
     It is organized by Angeline Aguinaldo, Elena Di Lavore, Sophie Libkind, and David Jaz Myers. 
     The research week will be held at the University of Strathclyde in Glasgow, Scotland. </p>
-  
-  <h5> Important Dates </h5>
-  <p>
-    <ul>
-      <li><i>February 04, 2022</i>. Application Due</li>
-      <li><i>February - June, 2022</i>. Learning Seminar</li>
-      <li><i>July 11 - 15, 2022</i>. Research Week at  the University of Strathclyde in Glasgow, Scotland </li>
-    </ul>
-  </p>
 
-  <p> Current participants can find important links, information, and the schedule on the 
-   <a href = "https://docs.google.com/document/d/1w731_rSoIez9t7CMwU513tQmRrI2fLKj2kA3xyHVe0o/edit?usp=sharing"> 
-  Landing Page </a>. Please note that this document is only accessible to current Adjoint School students, TAs, and mentors. </p>
+  <div class="row">
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-8">
+        <img src="images/2022-group.jpg" class="rounded img-fluid group"></img>
+  </div>
+  <div class="col-md-2">
+  </div>
+  </div>
 
 
 
