--- a/2023.html
+++ b/2023.html
@@ -151,7 +151,7 @@
         <p> Readings</p>
         <ul>
             <li>
-                <a href = "https://arxiv.org/abs/2106.08896"> Sheaf representation of monoidal categories</a>m  <i>R. Soares Barbosa, C. Heunen</i>
+                <a href = "https://arxiv.org/abs/2106.08896"> Sheaf representation of monoidal categories</a>,  <i>R. Soares Barbosa, C. Heunen</i>
             </li>
             <li>
               <a href="https://arxiv.org/abs/2010.08233">  Concurrent Process Histories and Resource Transducers</a>, <i>C. Nester</i>
@@ -201,3 +201,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
+`
