update message on apply page

--- a/apply.html
+++ b/apply.html
@@ -56,7 +56,7 @@
       <main role="main" class="container">
 
     <h1>Apply</h1>
-    <p>Applications for the 2022 Adjoint School are now closed! We will be in touch with all applicants by the end of February.</p>
+    <p>Applications for the 2023 Adjoint School will be opening at the beginning of December 2022. Stay tuned!</p>
 <!-- 
     <h3> Application Process </h3>
 
