add students for 2022

--- a/2022.html
+++ b/2022.html
@@ -87,7 +87,7 @@
               <h5> Compositional Thermodynamics </h5>
               <p><i>Mentors:</i> Spencer Breiner and Joe Moeller 
               <br> <i>TA:</i> Owen Lynch
-              <!-- <br> <i>Students:</i> -->
+              <br> <i>Students:</i> Chad Harper, Lia Yeh, Mano Namuduri, Nandan Kulkarni
             </p> 
           </center>
           <hr> </hr>
@@ -108,7 +108,7 @@
               <h5> Fuzzy Type Theory for Opinion Dynamics </h5>
               <p><i>Mentor:</i>  Paige North
               <br> <i>TA: </i> Hans Reiss
-              <!-- <br> <i>Students:</i>  -->
+              <br> <i>Students:</i> Ana Luiza da Conceição Tenorio, Greta Coraglia, Sean O'Connor, Shreya Arya
               </p>
           </center>
           <hr></hr>
@@ -136,7 +136,7 @@
             <h5> A Compositional Theory of Timed and Probabilistic Processes: CospanSpan(Graph)</h5>
             <p><i>Mentor:</i>  Nicoletta Sabadini
             <br> <i>TA: </i> Mario Rom&aacute;n
-            <!-- <br> <i>Students:</i>  -->
+            <br> <i>Students:</i> Miguel Lopez, Pim de Haan, Ruben Van Belle, Siddharth Bhat
           </p>
         </center>
         <hr></hr>
@@ -174,7 +174,7 @@
             <h5> Algebraic Structures in Logic and Relations</h5>
             <p><i>Mentor:</i>  Filippo Bonchi
             <br> <i>TA: </i>  Chad Nester
-            <!-- <br> <i>Students:</i>  -->
+            <br> <i>Students:</i> Nathan Haydon, Phoebe Klett, Ralph Sarkis, Rowan Poklewski-Koziell
             </p>
         </center>
         <hr></hr>
