--- a/apply.html
+++ b/apply.html
@@ -56,13 +56,13 @@
       <main role="main" class="container">
 
     <h1>Apply</h1>
-    <p>Applications for the 2023 Adjoint School will be opening at the beginning of December 2022. Stay tuned!</p>
-<!-- 
+    <p>Applications for the 2023 Adjoint School are now open! The deadline for applications is <strong>Monday, January 9, 2023 11:59 PM</strong> anywhere in the world.</p>
+
     <h3> Application Process </h3>
 
-    <p> To begin the application process, fill out the following pre-application form to receive the application materials: <a href="https://forms.gle/dV5JsMusr5zmU81AA">pre-application form</a>.</p>
+    <p> To begin the application process, fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfUuRKb3D44qWCcdGg6V5lJHFkd4GlpZt-8dJnXZDV8Vo8OOQ/viewform?usp=sf_link"><strong>pre-application form</strong></a> to receive the application materials.</p>
 
-    <p>After you fill out your pre-application, you will recieve an email with further instructions. This email will include:
+    <p>After you fill out your pre-application, you will receive an email with further instructions. This email will include:
       <ol>
         <li>The application form.</li> 
         <li>A reference form which you should send to a person who is willing to write a letter of reference on your behalf.</li>
@@ -72,7 +72,7 @@
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
- -->
+
 
     <hr></hr>
     <div class="row">
