add message about visas

--- a/apply.html
+++ b/apply.html
@@ -72,7 +72,7 @@
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
-
+     <p><i><strong>A reminder for non-US applicants</strong>: Please check <a href="https://travel.state.gov/content/travel/en/us-visas/visa-information-resources/wait-times.html">visa requirements and timelines</a> for processing applications. The organizers are aware this process is not ideal and that longer processing times have only made it more difficult.</i></p>
 
     <hr></hr>
     <div class="row">
