--- a/apply.html
+++ b/apply.html
@@ -56,9 +56,9 @@
       <main role="main" class="container">
 
     <h1>Apply</h1>
-    <p>Applications for the 2023 Adjoint School are now open! The deadline for applications is <strong>Monday, January 9, 2023 11:59 PM</strong> anywhere in the world.</p>
+    <p>Applications for the 2023 Adjoint School are now closed! </p>
 
-    <h3> Application Process </h3>
+    <!-- <h3> Application Process </h3>
 
     <p> To begin the application process, fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfUuRKb3D44qWCcdGg6V5lJHFkd4GlpZt-8dJnXZDV8Vo8OOQ/viewform?usp=sf_link"><strong>pre-application form</strong></a> to receive the application materials.</p>
 
@@ -72,7 +72,7 @@
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
-     <p><i><strong>A reminder for non-US applicants</strong>: Please check <a href="https://travel.state.gov/content/travel/en/us-visas/visa-information-resources/wait-times.html">visa requirements and timelines</a> for processing applications. The organizers are aware this process is not ideal and that longer processing times have only made it more difficult.</i></p>
+     <p><i><strong>A reminder for non-US applicants</strong>: Please check <a href="https://travel.state.gov/content/travel/en/us-visas/visa-information-resources/wait-times.html">visa requirements and timelines</a> for processing applications. The organizers are aware this process is not ideal and that longer processing times have only made it more difficult.</i></p> -->
 
     <hr></hr>
     <div class="row">
