--- a/2023.html
+++ b/2023.html
@@ -89,7 +89,7 @@
           <center>
               <h5> Message Passing Logic for Categorical Quantum Mechanics</h5>
               <p><i>Mentor:</i> Priyaa Srinivasan 
-              <br> <i>TA:</i> Amolak Ratan Kalra
+              <br> <i>TA:</i> Amolak Ratan Kalra and Rose Kudzman-Blais
               <!-- <br> <i>Students:</i> -->
             </p> 
           </center>
