add landing page link

--- a/2023.html
+++ b/2023.html
@@ -74,8 +74,8 @@
   </p>
 
   <p> Current participants can find important links, information, and the schedule on the 
-   <a href = ""> 
-  Landing Page (Under construction) </a>. Please note that this document is only accessible to current Adjoint School students, TAs, and mentors. </p>
+   <a href = "https://docs.google.com/document/d/1ott4ZcQlvX3K5tGKh-xmifjAYlkzjB9gwbA4NdYviwA/edit?usp=sharing"> 
+  Landing Page </a>. Please note that this document is only accessible to current Adjoint School students, TAs, and mentors. </p>
 
 
 
