add student names

--- a/2023.html
+++ b/2023.html
@@ -75,7 +75,7 @@
 
   <p> Current participants can find important links, information, and the schedule on the 
    <a href = "https://docs.google.com/document/d/1ott4ZcQlvX3K5tGKh-xmifjAYlkzjB9gwbA4NdYviwA/edit?usp=sharing"> 
-  Landing Page </a>. Please note that this document is only accessible to current Adjoint School students, TAs, and mentors. </p>
+  Landing Page</a>. Please note that this document is only accessible to current Adjoint School students, TAs, and mentors. </p>
 
 
 
@@ -90,7 +90,7 @@
               <h5> Message Passing Logic for Categorical Quantum Mechanics</h5>
               <p><i>Mentor:</i> Priyaa Srinivasan 
               <br> <i>TA:</i> Amolak Ratan Kalra and Rose Kudzman-Blais
-              <!-- <br> <i>Students:</i> -->
+              <br> <i>Students: Paige Frederick, Isaiah Hilsenrath, Fabian Wiesner, Brandon Baylor, Durgesh Kumar</i>
             </p> 
           </center>
           <hr> </hr>
@@ -111,7 +111,7 @@
               <h5> Behavioural Metrics, Quantitative Logics and Coalgebras </h5>
               <p><i>Mentor:</i>  Barbara König
               <br> <i>TA: </i> Paul Wild and Sebastian Gurke
-              <!-- <br> <i>Students:</i>  -->
+              <br> <i>Students: Keri D'Angelo, (Wojtek) Wojciech Rozowski, Matina Najafi, Johanna Maria Kirss, Avi Craimer</i> 
               </p>
           </center>
           <hr></hr>
@@ -141,7 +141,7 @@
             <h5> Concurrency in monoidal categories</h5>
             <p><i>Mentor:</i>  Chris Heunen
             <br> <i>TA: </i> Carmen Constantin and Nesta van der Schaaf
-            <!-- <br> <i>Students:</i>  -->
+            <br> <i>Students: Ariadne Si Suo, Clémence Chanavat, Ariel Rosenfield, Luke Morris</i> 
           </p>
         </center>
         <hr></hr>
@@ -168,7 +168,7 @@
             <h5> Game Comonads and Finite Model Theory </h5>
             <p><i>Mentor:</i>  Dan Marsden
             <br> <i>TA: </i>  Nihil Shah
-            <!-- <br> <i>Students:</i>  -->
+            <br> <i>Students: Tyler Hanks, Zhixuan Yang, Richie Yeung, Elena Dimitriadis Bermejo</i> 
             </p>
         </center>
         <hr></hr>
