--- a/2023.html
+++ b/2023.html
@@ -90,7 +90,7 @@
               <h5> Message Passing Logic for Categorical Quantum Mechanics</h5>
               <p><i>Mentor:</i> Priyaa Srinivasan 
               <br> <i>TA:</i> Amolak Ratan Kalra and Rose Kudzman-Blais
-              <br> <i>Students: Paige Frederick, Isaiah Hilsenrath, Fabian Wiesner, Brandon Baylor, Durgesh Kumar</i>
+              <br> <i>Students:</i> Paige Frederick, Isaiah Hilsenrath, Fabian Wiesner, Brandon Baylor, Durgesh Kumar
             </p> 
           </center>
           <hr> </hr>
@@ -111,7 +111,7 @@
               <h5> Behavioural Metrics, Quantitative Logics and Coalgebras </h5>
               <p><i>Mentor:</i>  Barbara König
               <br> <i>TA: </i> Paul Wild and Sebastian Gurke
-              <br> <i>Students: Keri D'Angelo, (Wojtek) Wojciech Rozowski, Matina Najafi, Johanna Maria Kirss, Avi Craimer</i> 
+              <br> <i>Students:</i> Keri D'Angelo, (Wojtek) Wojciech Rozowski, Matina Najafi, Johanna Maria Kirss, Avi Craimer 
               </p>
           </center>
           <hr></hr>
@@ -141,7 +141,7 @@
             <h5> Concurrency in monoidal categories</h5>
             <p><i>Mentor:</i>  Chris Heunen
             <br> <i>TA: </i> Carmen Constantin and Nesta van der Schaaf
-            <br> <i>Students: Ariadne Si Suo, Clémence Chanavat, Ariel Rosenfield, Luke Morris</i> 
+            <br> <i>Students:</i> Ariadne Si Suo, Clémence Chanavat, Ariel Rosenfield, Luke Morris 
           </p>
         </center>
         <hr></hr>
@@ -168,7 +168,8 @@
             <h5> Game Comonads and Finite Model Theory </h5>
             <p><i>Mentor:</i>  Dan Marsden
             <br> <i>TA: </i>  Nihil Shah
-            <br> <i>Students: Tyler Hanks, Zhixuan Yang, Richie Yeung, Elena Dimitriadis Bermejo</i> 
+            <br> <i>Students:  Tyler Hanks, Zhixuan Yang, Richie Yeung, Elena Dimitriadis Bermejo 
+            <br> <i>Students:</i>  Tyler Hanks, Zhixuan Yang, Richie Yeung, Elena Dimitriadis Bermejo 
             </p>
         </center>
         <hr></hr>
