--- a/2021.html
+++ b/2021.html
@@ -156,7 +156,7 @@
         <div class = "past-proj">
           <center>
               <h5> Extensions of coalgebraic dynamic logic</h5>
-              <p><i>Mentors:</i>  Helle Hvid Hanse and Clemes Kupke
+              <p><i>Mentors:</i>  Helle Hvid Hansen and Clemens Kupke
               <br> <i>TA: </i> Toby Smithe
               <br> <i>Students:</i> Anthony Agwu, Gabo Goren, Amin Karamlou, Stelios Tsampas  </p>
           </center>
