2024 updates before confirming mentors
changed a bunch of dates and changed the navbar on each page.

--- a/2024.html
+++ b/2024.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,9 +14,9 @@
 
     <link rel="icon" href="images/leftright.png">
 
-  </head>
-  <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+</head>
+<body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
         <a class="navbar-brand" href="index.html">The Adjoint School</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,42 +55,24 @@
     </nav>
 
 
-      <main role="main" class="container">
+<main role="main" class="container">
 
 
-    <h1>The Adjoint School</h1>
+  <h1>The Adjoint School 2024</h1>
 
-    <div class="row">
-        <div class="col-lg-7 v-align">
-            <p>The Adjoint School is an annual research school in applied category theory. It aims to
-                <ul>
-                    <li> foster an open-hearted and open-minded environment where new applied category theorists develop the skills of research,</li>
-                    <li> welcome new researchers into cutting-edge research programs in applied category theory, and</li>
-                    <li> grow and strengthen the applied category theory community</li>
-                </ul>
-            </p>
-            <p>To learn more about the school, please visit the <a href="about.html">About</a> page.</p>
-        </div>
-        <div class="col-lg-5 v-align">
-            <img src="images/2018-actionshot.jpg" class="rounded img-fluid"></img>
-        </div>
-    </div>
 
-    <hr></hr>
+  <p> Mentors and projects for the 2024 Adjoint School have not been decided yet. Please check back soon for updates! </p>
 
-    <h3>Announcements</h3>
-          <ul>
-              <li><i>Oct 7, 2023</i>. The organizers of the Adjoint School 2024 are Ana Luiza da Conceição Tenorio, Nathan Haydon, Elena Dimitriadis-Bermejo, and Ari Rosenfield. The steering committee consists of David Jaz Myers, Daniel Cicala, and Brendan Fong.</li>
-          </ul>
 
-          </div>
-
+  <hr></hr>
+    
+</section>
 
 </main>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+</body>
 </html>
