--- a/2023.html
+++ b/2023.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+  <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
     <a class="navbar-brand" href="index.html">The Adjoint School</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,13 +41,14 @@
                     <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
                     <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
                     <a class="dropdown-item" href="2022.html">Adjoint School 2022</a>
+                    <a class="dropdown-item" href="2023.html">Adjoint School 2023</a>
                 </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="papers.html">Papers & Blogposts</a>
             </li>
             <li>
-                <a class="nav-link" href="2023.html">Adjoint School 2023</a>
+                <a class="nav-link" href="2024.html">Adjoint School 2024</a>
             </li>
         </ul>
     </div>
@@ -60,25 +61,20 @@
   <h1>The Adjoint School 2023</h1>
 
 
-  <p> The 2023 Adjoint School features projects mentored by Priyaa Srinivasan, Barbara König, Chris Heunen, and Dan Marsden.
+  <p> The 2023 Adjoint School featured projects mentored by Priyaa Srinivasan, Barbara König, Chris Heunen, and Dan Marsden.
     It is organized by Ana Luiza da Conceição Tenorio, Nathan Haydon, Elena Di Lavore, and Angeline Aguinaldo. 
-    The research week will be held at the University of Maryland, College Park, USA. </p>
-  
-  <h5> Important Dates </h5>
-  <p>
-    <ul>
-      <li><i>January 9, 2023</i>. Application Due</li>
-      <li><i>February - July, 2023</i>. Learning Seminar</li>
-      <li><i>July 24 - 28, 2023</i>. Research Week at the University of Maryland, College Park</li>
-    </ul>
-  </p>
+    The research week was held at the University of Maryland, College Park, USA. </p>
 
-  <p> Current participants can find important links, information, and the schedule on the 
-   <a href = "https://docs.google.com/document/d/1ott4ZcQlvX3K5tGKh-xmifjAYlkzjB9gwbA4NdYviwA/edit?usp=sharing"> 
-  Landing Page</a>. Please note that this document is only accessible to current Adjoint School students, TAs, and mentors. </p>
-
-
-
+    <div class="row">
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-8">
+          <img src="images/2023-group.jpg" class="rounded img-fluid group"></img>
+    </div>
+    <div class="col-md-2">
+    </div>
+    </div>
+    
   <hr></hr>
 
   <h3> Research Projects </h3>
