--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <h3>Announcements</h3>
           <ul>
-              <li><i>Oct 7, 2023</i>. The organizers of the Adjoint School 2024 are Ana Luiza da Conceição Tenorio, Nathan Haydon, Elena Dimitriadis-Bermejo, and Ari Rosenfield. The steering committee consists of David Jaz Myers, Daniel Cicala, and Brendan Fong.</li>
+              <li><i>Oct 7, 2023</i>. The organizers of the Adjoint School 2024 are Ana Luiza da Conceição Tenorio, Nathan Haydon, Elena Dimitriadis Bermejo, and Ari Rosenfield. The steering committee consists of David Jaz Myers, Daniel Cicala, and Brendan Fong.</li>
           </ul>
 
           </div>
