--- a/2024.html
+++ b/2024.html
@@ -186,7 +186,7 @@
           </li>
           <li>
                
-            <a href="https://link.springer.com/chapter/10.1007/3-540-58338-6_102"> Critical pairs in term graph rewriting</a>, <i> Detlef Plump, 
+            <a href="https://link.springer.com/chapter/10.1007/3-540-58338-6_102"> Critical pairs in term graph rewriting</a>, <i> Detlef Plump 
             </i>, MFCS 1994.
         </li>
   
