--- a/apply.html
+++ b/apply.html
@@ -57,11 +57,10 @@
       <main role="main" class="container">
 
     <h1>Apply</h1>
-    <p>Mentors and projects for the 2024 Adjoint School have not been decided yet. Please check back soon for updates! </p>
 
-    <!-- <h3> Application Process </h3>
+    <p></p>
 
-    <p> To begin the application process, fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfUuRKb3D44qWCcdGg6V5lJHFkd4GlpZt-8dJnXZDV8Vo8OOQ/viewform?usp=sf_link"><strong>pre-application form</strong></a> to receive the application materials.</p>
+    <p> To begin the application process, fill out the <a href="https://forms.gle/GbKkfdp2kKySYpZW6"><strong>pre-application form</strong></a> to receive the application materials. The application deadline is December 31, 2023.</p>
 
     <p>After you fill out your pre-application, you will receive an email with further instructions. This email will include:
       <ol>
@@ -73,7 +72,7 @@
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
 
-     <p><i><strong>A reminder for non-US applicants</strong>: Please check <a href="https://travel.state.gov/content/travel/en/us-visas/visa-information-resources/wait-times.html">visa requirements and timelines</a> for processing applications. The organizers are aware this process is not ideal and that longer processing times have only made it more difficult.</i></p> -->
+     <p><i><strong>A reminder for non-UK applicants</strong>: Please check <a href="https://www.gov.uk/check-uk-visa">whether you need a visa to attend the research week.</a> Keep in mind that processing times for visa applications may be long, so it may be necessary to start the process early to ensure that you can travel to the UK for the research week.</i></p>
 
     <hr></hr>
     <div class="row">
