--- a/about.html
+++ b/about.html
@@ -73,11 +73,11 @@
                   <div class="col-md-6 v-align">
                         <center>
                           <table>
-                              <tr> <td><i>December - January</i></td> <td> applications open</td> </tr>
-                              <tr> <td><i>February</i></td> <td> participants announced</td> </tr>
-                              <tr> <td><i>March - June </i></td> <td> online learning seminar</td> </tr>
-                              <tr> <td><i>mid-July</i></td> <td> in-person research week </td> </tr>
-                              <tr> <td><i>mid-July</i></td> <td> Applied Category Theory conference</td> </tr>
+                              <tr> <td><i>November 2023 - December 2023</i></td> <td> applications open</td> </tr>
+                              <tr> <td><i>mid-January, 2024</i></td> <td> participants announced</td> </tr>
+                              <tr> <td><i>February - May, 2024 </i></td> <td> online learning seminar</td> </tr>
+                              <tr> <td><i>June 10-14, 2024</i></td> <td> in-person research week </td> </tr>
+                              <tr> <td><i>June 17-21, 2024</i></td> <td> Applied Category Theory conference</td> </tr>
                           </table>
                       </center>
 
