added 2024 TAs for Koko's project

--- a/2024.html
+++ b/2024.html
@@ -165,7 +165,7 @@
           <center>
               <h5> Critical Pairs for String Diagram Rewriting</h5>
               <p><i>Mentor:</i>  Koko Muroya
-              <br> <i>TA: </i> TBD
+              <br> <i>TA: </i> Diana Kessler, Juan Meleiro
               <br> <i>Students:</i>  TBD
             </p>
           </center>
