--- a/2023.html
+++ b/2023.html
@@ -195,6 +195,16 @@
 </div>
 </section>
 
+<hr></hr>
+
+  <h3> Sponsors </h3>
+
+  <br>
+
+  <img src="images/2023 sponsors/20squares.svg" width="200px"><img src="images/2023 sponsors/AARMS.png" width="200px"> <img src="images/2023 sponsors/conexus.png" width="200px"><img src="images/2023 sponsors/deepmind.png" width="200px"><br>
+  <img src="images/2023 sponsors/NIST_logo.svg.png" width="200px"><img src="images/2023 sponsors/PIMS.png" width="200px">
+  <img src="images/2023 sponsors/quant.jpeg" width="200px"><img src="images/2023 sponsors/UFL.png" width="200px"><br>
+
 </main>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
