--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <li><i>Nov 27, 2023</i>. Project descriptions for the 2024 session are available <a href="2024.html">here!</a> The 2024 application form will be available soon.</li>
 
-            <li><i>Oct 7, 2023</i>. The organizers of the Adjoint School 2024 are Ana Luiza da Conceição Tenorio, Nathan Haydon, Elena Dimitriadis Bermejo, and Ari Rosenfield. The steering committee consists of David Jaz Myers, Daniel Cicala, and Brendan Fong.</li>
+            <li><i>Oct 7, 2023</i>. The organizers of the Adjoint School 2024 are Ana Luiza da Conceição Tenorio, Nathan Haydon, Elena Dimitriadis Bermejo, and Ari Rosenfield. The steering committee consists of David Jaz Myers, Daniel Cicala, Elena di Lavore, and Brendan Fong.</li>
           </ul>
 
           </div>
