--- a/apply.html
+++ b/apply.html
@@ -60,14 +60,7 @@
 
     <p></p>
 
-    <p> To begin the application process, fill out the <a href="https://forms.gle/GbKkfdp2kKySYpZW6"><strong>pre-application form</strong></a> to receive the application materials. The application deadline is December 31, 2023.</p>
-
-    <p>After you fill out your pre-application, you will receive an email with further instructions. This email will include:
-      <ol>
-        <li>The application form.</li> 
-        <li>A reference form which you should send to a person who is willing to write a letter of reference on your behalf.</li>
-      </ol>
-    The letter of reference should confirm any of the following: your background, the ACT School's relevance to your research or career, or your research or career experience.
+    <p> Applications for the 2024 session are now closed.
      </p> 
 
      <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
