added Topos institute to 2023 and 2024 sponsors list

--- a/2024.html
+++ b/2024.html
@@ -236,6 +236,12 @@
       </div>
   </div>
   </section>
+
+  <h3> Sponsors </h3>
+
+  <br>
+
+  <img src="images/2023 sponsors/topos-institute.jpg" width="200px">
   
   </main>
   <!-- Optional JavaScript -->
