--- a/2023.html
+++ b/2023.html
@@ -201,9 +201,9 @@
 
   <br>
 
-  <img src="images/2023 sponsors/20squares.svg" width="200px"><img src="images/2023 sponsors/AARMS.png" width="200px"> <img src="images/2023 sponsors/conexus.png" width="200px"><img src="images/2023 sponsors/deepmind.png" width="200px"><br>
+  <img src="images/2023 sponsors/topos-institute.jpg" width="200px"><img src="images/2023 sponsors/20squares.svg" width="200px"><img src="images/2023 sponsors/AARMS.png" width="200px"> <img src="images/2023 sponsors/conexus.png" width="200px"><br><img src="images/2023 sponsors/deepmind.png" width="200px">
   <img src="images/2023 sponsors/NIST_logo.svg.png" width="200px"><img src="images/2023 sponsors/PIMS.png" width="200px">
-  <img src="images/2023 sponsors/quant.jpeg" width="200px"><img src="images/2023 sponsors/UFL.png" width="200px"><br>
+  <img src="images/2023 sponsors/quant.jpeg" width="200px"><br><img src="images/2023 sponsors/UFL.png" width="200px">
 
 </main>
 <!-- Optional JavaScript -->
