added new paper

--- a/papers.html
+++ b/papers.html
@@ -64,6 +64,7 @@
     <h1>Papers</h1>
     <div id="papers">
         <ul>
+            <li>Barbara Giunti, John S. Nolan, Nina Otter, and Lukas Waas. “Amplitudes in persistence theory.” ArXiv abs/2107.09036 (2023).</li>
             <li>Di Lavore, Elena, Wilmer Leal and Valeria de Paiva. “Dialectica Petri nets.” ArXiv abs/2105.12801 (2021).</li>
             <li>Chollet, Emma, Bryce Clarke, Michael Johnson, Maurine Songa, Vincent Wang and Gioele Zardini. “Limits and colimits in a category of lenses.” (2021).</li>
             <li>Constantin, Carmen, Tobias Fritz, Paolo Perrone and Brandon Shapiro. “Weak cartesian properties of simplicial sets.” (2021).</li>
