--- a/2024.html
+++ b/2024.html
@@ -90,7 +90,7 @@
                 <h5>Properties of Double Fibrations</h5>
                 <p><i>Mentor:</i> Dorette Pronk 
                 <br> <i>TA:</i> Luca Mesiti, Elena Caviglia
-                <br> <i>Students:</i> TBD
+                <br> <i>Students:</i> C. B. Aberl&eacute;, Matt Kukla, Rub&eacute;n Maldonado, Tanjona Ralaivaosaona
               </p> 
             </center>
             <hr> </hr>
@@ -111,7 +111,7 @@
                 <h5> Applications of Skew Monoidal Categories </h5>
                 <p><i>Mentor:</i>  Niccol&ograve; Veltri
                 <br> <i>TA: </i> Cheng-Syuan Wan
-                <br> <i>Students:</i> TBD 
+                <br> <i>Students:</i> Pablo S. Ocal, Wilf Offord, Thea Li, Federica Pasqualone
                 </p>
             </center>
             <hr></hr>
@@ -166,7 +166,7 @@
               <h5> Critical Pairs for String Diagram Rewriting</h5>
               <p><i>Mentor:</i>  Koko Muroya
               <br> <i>TA: </i> Diana Kessler, Juan Meleiro
-              <br> <i>Students:</i>  TBD
+              <br> <i>Students:</i> Anna Matsui, Innocent Obi, Guillaume Sabbagh, Leo Torres
             </p>
           </center>
           <hr></hr>
@@ -201,7 +201,7 @@
               <h5> Modelling Uncertainty with Markov Categories </h5>
               <p><i>Mentor:</i> Paolo Perrone
               <br> <i>TA: </i> Tom&aacute;&scaron; Gonda
-              <br> <i>Students:</i>  TBD
+              <br> <i>Students:</i> Utku Boduroglu, Laura Gonzalez Bravo, Drew Allen McNeely, Luis Lopez, Nico Wittrock 
               </p>
           </center>
           <hr></hr>
