--- a/2024.html
+++ b/2024.html
@@ -241,7 +241,7 @@
 
   <br>
 
-  <img src="images/2023 sponsors/topos-institute.jpg" width="200px">
+  <img src="images/2023 sponsors/topos-institute.jpg" width="200px"><img src="images/2024 sponsors/symbolica.jpg" width="200px"><img src="images/2024 sponsors/cybercatlogo.png" width="200px"><img src="images/2024 sponsors/conexus.png" width="200px"><img src="images/2024 sponsors/viete.jpg" width="200px">
   
   </main>
   <!-- Optional JavaScript -->
