--- a/2024.html
+++ b/2024.html
@@ -243,7 +243,7 @@
 
   <a href="https://conexus.com/" target="_blank" rel="noopener noreferrer"><img src="images/2024 sponsors/conexus.png" width="200px"></a>
   <a href="https://cybercat.institute/" target="_blank" rel="noopener noreferrer"><img src="images/2024 sponsors/cybercatlogo.png" width="200px"></a>
-  <a href="https://viete.io/" target="_blank" rel="noopener noreferrer"><img src="images/2024 sponsors/viete.jpg" width="200px"></a>
+  <a href="https://viete.io/" target="_blank" rel="noopener noreferrer"><img src="images/2024 sponsors/viete.png" width="200px"></a>
   <a href="https://www.symbolica.ai/" target="_blank" rel="noopener noreferrer"> <img src="images/2024 sponsors/symbolica.jpg" width="200px"></a>
   <a href="https://topos.institute/" target="_blank" rel="noopener noreferrer"> <img src="images/2023 sponsors/topos-institute.jpg" width="200px"></a>
 
