add paper behavioural metrics

--- a/papers.html
+++ b/papers.html
@@ -64,6 +64,7 @@
     <h1>Papers</h1>
     <div id="papers">
         <ul>
+            <li>Keri D'Angelo, Sebastian Gurke, Johanna Maria Kirss, Barbara König, Matina Najafi, Wojciech Różowski, and Paul Wild. “Behavioural Metrics: Compositionality of the Kantorovich Lifting and an Application to Up-To Techniques.” CONCUR 2024. Also available on arXiv abs/2404.19632</li>
             <li>Barbara Giunti, John S. Nolan, Nina Otter, and Lukas Waas. “Amplitudes in persistence theory.” ArXiv abs/2107.09036 (2023).</li>
             <li>Di Lavore, Elena, Wilmer Leal and Valeria de Paiva. “Dialectica Petri nets.” ArXiv abs/2105.12801 (2021).</li>
             <li>Chollet, Emma, Bryce Clarke, Michael Johnson, Maurine Songa, Vincent Wang and Gioele Zardini. “Limits and colimits in a category of lenses.” (2021).</li>
