--- a/navbar.html
+++ b/navbar.html
@@ -24,6 +24,7 @@
                     <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
                     <a class="dropdown-item" href="2022.html">Adjoint School 2022</a>
                     <a class="dropdown-item" href="2023.html">Adjoint School 2023</a>
+                    <a class="dropdown-item" href="2023.html">Adjoint School 2024</a>
                 </div>
             </li>
             <li class="nav-item">
