Added group image to 2024 page and migrated 2024 page to dropdown, started 2025 page.

--- a/2024.html
+++ b/2024.html
@@ -42,13 +42,14 @@
                         <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
                         <a class="dropdown-item" href="2022.html">Adjoint School 2022</a>
                         <a class="dropdown-item" href="2023.html">Adjoint School 2023</a>
+                        <a class="dropdown-item" href="2024.html">Adjoint School 2024</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="papers.html">Papers & Blogposts</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="2024.html">Adjoint School 2024</a>
+                    <a class="nav-link" href="2025.html">Adjoint School 2025</a>
                 </li>
             </ul>
         </div>
@@ -61,9 +62,19 @@
     <h1>The Adjoint School 2024</h1>
 
 
-    <p> The 2024 Adjoint School features projects mentored by Dorette Pronk, Koko Muroya, Paolo Perrone, and Niccol&ograve; Veltri.
-      It is organized by Ana Luiza da Conceição Tenorio, Nathan Haydon, Ari Rosenfield, and Elena Dimitriadis Bermejo. 
-      The research week will be held at University of Oxford, UK. </p>
+    <p> The 2024 Adjoint School featured projects mentored by Dorette Pronk, Koko Muroya, Paolo Perrone, and Niccol&ograve; Veltri.
+      It was organized by Ana Luiza da Conceição Tenorio, Nathan Haydon, Ari Rosenfield, and Elena Dimitriadis Bermejo. 
+      The research week was held at University of Oxford, UK. </p>
+
+    <div class="row">
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-8">
+          <img src="images/2024-group-cropped.jpg" class="rounded img-fluid group"></img>
+    </div>
+    <div class="col-md-2">
+    </div>
+    </div>
 
      <!--- <h5> Important Dates </h5>
       <p>
@@ -78,9 +89,9 @@
        <a href = "https://docs.google.com/document/d/1ott4ZcQlvX3K5tGKh-xmifjAYlkzjB9gwbA4NdYviwA/edit?usp=sharing"> 
       Landing Page</a>. Please note that this document is only accessible to current Adjoint School students, TAs, and mentors. </p>
       -->
-      
+
     <hr></hr>
-  
+
     <h3> Research Projects </h3>
   
     <div class = "row">
