--- a/about.html
+++ b/about.html
@@ -41,13 +41,14 @@
                         <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
                         <a class="dropdown-item" href="2022.html">Adjoint School 2022</a>
                         <a class="dropdown-item" href="2023.html">Adjoint School 2023</a>
+                        <a class="dropdown-item" href="2024.html">Adjoint School 2024</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="papers.html">Papers & Blogposts</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="2024.html">Adjoint School 2024</a>
+                    <a class="nav-link" href="2025.html">Adjoint School 2025</a>
                 </li>
             </ul>
         </div>
