Added coming soon text

--- a/2025.html
+++ b/2025.html
@@ -59,7 +59,7 @@
 <main role="main" class="container">
 
 
-    <h1>The Adjoint School 2025</h1>
+    <h1 style="text-align: center">The Adjoint School 2025</h1>
 
 
      <!--- <h5> Important Dates </h5>
@@ -78,6 +78,7 @@
       
     <hr></hr>
   
+		<h2 style="text-align: center">Project announcements coming soon!</h2>
   
   </main>
   <!-- Optional JavaScript -->
